--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p>いらっしゃいませ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>暖かい気持ちで見ていただけると幸いです！</p>
   <h2>✏️レポート一覧</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a>
+    <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a><br>
     <a href="https://shunsan4164649.github.io/202510.html">2025年10月 (0)</a>
   </ul>
 </body>
