--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <h1>シュンさんのおもいで。</h1>
   <p>いらっしゃいませ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>暖かい気持ちで見ていただけると幸いです！</p>
-  <h2>✏️レポート一覧</h2>
+  <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a><br>
     <a href="https://shunsan4164649.github.io/202510.html">2025年10月 (0)</a>
