--- a/202509.html
+++ b/202509.html
@@ -29,7 +29,7 @@
 <body>
   <h1>2025年9月 トラベルレポート</h1>
   <p>こちらでは、2025年9月中に行った旅行のレポートをまとめております。</p>
-  <h2>✏️おもいで記録</h2>
+  <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシーで初レイスピ体験！(9月7日)</a><br>
     <a href="https://shunsan4164649.github.io/20250913.html">池袋で久しぶりのRound1(9月13日)</a><br>
