--- a/202510.html
+++ b/202510.html
@@ -29,7 +29,7 @@
 <body>
   <h1>2025年10月 トラベルレポート</h1>
   <p>こちらでは、2025年10月中に行った旅行のレポートをまとめております。</p>
-  <h2>✏️おもいで記録</h2>
+  <h2>✏️おもいで記録✏️</h2>
   <ul></ul>
 </body>
 </html>
