--- a/20250907.html
+++ b/20250907.html
@@ -30,6 +30,6 @@
   <h1>🎢 <span class="date">9月7日</span></h1>
   <h2>東京ディズニーシーで初レイスピ体験！</h2>
   <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、荷物が落ちないか心配でした・・・<br>あとは「ファンタジースプリングス」でのキャラグリも満喫しました♪</p>
-  <img src="img/250907.jpg">
+  <img src="img/250907.jpg" alt="picture" width="300" height="200">
 </body>
 </html>
