--- a/20250907.html
+++ b/20250907.html
@@ -23,6 +23,11 @@
       font-weight: bold;
       color: #2980b9;
     }
+    .image-16-9 {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      object-fit: cover;
+    }
   </style>
 </head>
 
@@ -30,6 +35,6 @@
   <h1>🎢 <span class="date">9月7日</span></h1>
   <h2>東京ディズニーシーで初レイスピ体験！</h2>
   <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、荷物が落ちないか心配でした・・・<br>あとは「ファンタジースプリングス」でのキャラグリも満喫しました♪</p>
-  <img src="img/250907.jpg" alt="picture" width="300" height="200">
+  <img src="img/250907.jpg" alt="16:9 画像" class="image-16-9">
 </body>
 </html>
