--- a/202509.html
+++ b/202509.html
@@ -36,7 +36,9 @@
     <a href="https://shunsan4164649.github.io/20250915.html">秋葉原で人生初のメイドカフェを堪能！(9月15日)</a><br>
     <a href="https://shunsan4164649.github.io/20250920.html">お台場でUCガンダム見学とショッピング(9月20日)</a><br>
     <a href="https://shunsan4164649.github.io/20250922.html">東京ソラマチで遊んできた！(9月22日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250923.html">東京駅周辺で買い物三昧！(9月23日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250923.html">東京駅周辺で買い物三昧！(9月23日)</a>
+    <br><br>
+    <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
 </body>
 </html>
