--- a/202510.html
+++ b/202510.html
@@ -30,6 +30,8 @@
   <h1>2025年10月 トラベルレポート</h1>
   <p>こちらでは、2025年10月中に行った旅行のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
-  <ul></ul>
+  <ul>
+    <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
+  </ul>
 </body>
 </html>
