--- a/20250907.html
+++ b/20250907.html
@@ -32,6 +32,6 @@
   <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、荷物が落ちないか心配でした・・・<br>あとは「ファンタジースプリングス」でのキャラグリも満喫しました♪</p>
   <img src="img/250907.jpg" width="640" height="360" alt="16:9 画像">
   <br><br>
-  <a href="https://shunsan4164649.github.io/index.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
 </body>
 </html>
