--- a/20250913.html
+++ b/20250913.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>2025年9月7日</title>
+  <title>2025年9月13日</title>
   <style>
     body {
       font-family: "Helvetica", "Arial", sans-serif;
@@ -28,7 +28,7 @@
 
 <body>
   <h1>🎳 <span class="date">9月13日</span></h1>
-  <h2>池袋で久しぶりのRound1</h2>
+  <h2>池袋駅周辺のRound1に行ったよ～</h2>
   <p>池袋駅周辺にあるRound1へ遊びに行きました！<br>ボウリングで投げ放題してきました。<br>思わず童心に帰ったような気分に浸りました・・・</p>
   <img src="img/250913_1.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
