--- a/202509.html
+++ b/202509.html
@@ -32,7 +32,7 @@
   <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシーで初レイスピ体験！(9月7日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250913.html">池袋で久しぶりのRound1(9月13日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺のRound1に行ったよ～(9月13日)</a><br>
     <a href="https://shunsan4164649.github.io/20250915.html">秋葉原で人生初のメイドカフェを堪能！(9月15日)</a><br>
     <a href="https://shunsan4164649.github.io/20250920.html">お台場でUCガンダム見学とショッピング(9月20日)</a><br>
     <a href="https://shunsan4164649.github.io/20250922.html">東京ソラマチで遊んできた！(9月22日)</a><br>
