--- a/20250920.html
+++ b/20250920.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>2025年9月15日</title>
+  <title>2025年9月20日</title>
   <style>
     body {
       font-family: "Helvetica", "Arial", sans-serif;
@@ -27,11 +27,11 @@
 </head>
 
 <body>
-  <h1>🎀 <span class="date">9月15日</span></h1>
-  <h2>秋葉原で人生初のメイドカフェを堪能！</h2>
-  <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧で、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
-  <img src="img/250915_1.jpg" width="320" height="180" alt="16:9 画像">
-  <img src="img/250915_2.jpg" style="width: 54mm; height: 86mm;" alt="チェキサイズ画像">
+  <h1>🤖 <span class="date">9月20日</span></h1>
+  <h2>お台場でUCガンダム見学とショッピング</h2>
+  <p>お台場にある「ダイバーシティ東京プラザ」の玄関口にあるUCガンダム像を見学！<br>デザインもかっこよくいつか動きそうなオーラが漂ってました。<br>その後はショッピングを楽しみ、充実した一日に。</p>
+  <img src="img/250920_1.jpg" width="180" height="320" alt="9:16 画像">
+  <img src="img/250920_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
   <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
 </body>
