--- a/202509.html
+++ b/202509.html
@@ -35,7 +35,7 @@
     <a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺のRound1に行ったよ～(9月13日)</a><br>
     <a href="https://shunsan4164649.github.io/20250915.html">秋葉原で人生初のメイドカフェを堪能！(9月15日)</a><br>
     <a href="https://shunsan4164649.github.io/20250920.html">お台場でUCガンダム見学とショッピング(9月20日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250922.html">東京ソラマチで遊んできた！(9月22日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250922.html">東京スカイツリー登頂とすみだ水族館でペンギンを観察。(9月22日)</a><br>
     <a href="https://shunsan4164649.github.io/20250923.html">東京駅周辺で買い物三昧！(9月23日)</a>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
