--- a/20250922.html
+++ b/20250922.html
@@ -28,7 +28,7 @@
 
 <body>
   <h1>🐧 <span class="date">9月22日</span></h1>
-  <h2>東京スカイツリー登頂とすみだ水族館でペンギンを観察。</h2>
+  <h2>東京スカイツリー登頂とすみだ水族館内満喫</h2>
   <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧で、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
   <img src="img/250922_1.jpg" width="180" height="320" alt="9:16 画像">
   <img src="img/250922_2.jpg" width="320" height="180" alt="16:9 画像">
