--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Shunsan travel memories</title>
+  <title>トップページ</title>
   <style>
     body {
       font-family: "Helvetica", "Arial", sans-serif;
@@ -34,8 +34,8 @@
 </head>
 
 <body>
-  <h1>シュンさんのおもいで。</h1>
-  <p>いらっしゃいませ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>暖かい気持ちで見ていただけると幸いです！</p>
+  <h1>⭐️シュンさんのおもいで⭐️</h1>
+  <p>ページに来てくれた皆さん、ようこそ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>どうか暖かい気持ちで見ていただけると幸いです！</p>
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a>
