--- a/202509.html
+++ b/202509.html
@@ -31,12 +31,12 @@
   <p>こちらでは、2025年9月中に行った旅行のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシーで初レイスピ体験！(9月7日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺のRound1に行ったよ～(9月13日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250915.html">秋葉原で人生初のメイドカフェを堪能！(9月15日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250920.html">お台場でUCガンダム見学とショッピング(9月20日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250922.html">東京スカイツリー登頂とすみだ水族館内満喫。(9月22日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250923.html">東京駅周辺で買い物三昧！(9月23日)</a>
+    <a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシー(9月7日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺散策(9月13日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250915.html">あっとほぉーむカフェ(9月15日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250920.html">ダイバーシティ東京プラザ(9月20日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250922.html">東京スカイツリー＆すみだ水族館(9月22日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250923.html">東京駅構内＆周辺散策(9月23日)</a>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
