--- a/20250915.html
+++ b/20250915.html
@@ -28,7 +28,7 @@
 
 <body>
   <h1>🎀 <span class="date">9月15日</span></h1>
-  <h2>秋葉原で人生初のメイドカフェを堪能！</h2>
+  <h2>あっとほぉーむカフェ</h2>
   <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧で、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
   <img src="img/250915_1.jpg" width="320" height="180" alt="16:9 画像">
   <img src="img/250915_2.jpg" style="width: 54mm; height: 86mm;" alt="チェキサイズ画像">
