--- a/20250922.html
+++ b/20250922.html
@@ -29,7 +29,7 @@
 <body>
   <h1>🐧 <span class="date">9月22日</span></h1>
   <h2>東京スカイツリー＆すみだ水族館</h2>
-  <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧で、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
+  <p>東京スカイツリーに登り、久しぶりに絶景を堪能。<br>すみだ水族館ではペンギンたちに癒やされました。<br>水族館って何回行っても飽きないよね～</p>
   <img src="img/250922_1.jpg" width="180" height="320" alt="9:16 画像">
   <img src="img/250922_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
