--- a/20250923.html
+++ b/20250923.html
@@ -28,7 +28,7 @@
 
 <body>
   <h1>🚉 <span class="date">9月23日</span></h1>
-  <h2>東京駅内で買い物三昧。</h2>
+  <h2>東京駅周辺散策</h2>
   <p>東京駅構内や周辺でショッピングを楽しみました。<br>お土産探しや駅の構造を見て回るのも面白くて、魅力を再発見！</p>
   <img src="img/250923_1.JPG" width="320" height="180" alt="16:9 画像">
   <img src="img/250923_2.JPG" width="320" height="180" alt="16:9 画像">
