--- a/20250913.html
+++ b/20250913.html
@@ -30,8 +30,8 @@
   <h1>🎳 <span class="date">9月13日</span></h1>
   <h2>池袋駅周辺散策</h2>
   <p>池袋駅周辺にあるRound1へ遊びに行きました！<br>ボウリングで投げ放題してきました。<br>思わず童心に帰ったような気分に浸りました・・・</p>
-  <img src="img/250913_1.jpg" width="320" height="180" alt="16:9 画像">
-  <img src="img/250913_2.jpg" width="320" height="180" alt="16:9 画像">
+  <img src="img/250913/250913_1.jpg" width="320" height="180" alt="16:9 画像">
+  <img src="img/250913/250913_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
   <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
 </body>
