--- a/202509.html
+++ b/202509.html
@@ -34,7 +34,7 @@
     <a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシー(9月7日)</a><br>
     <a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺散策(9月13日)</a><br>
     <a href="https://shunsan4164649.github.io/20250915.html">あっとほぉーむカフェ(9月15日)</a><br>
-    <a href="https://shunsan4164649.github.io/20250920.html">フジテレビ・ダイバーシティ東京プラザ(9月20日)</a><br>
+    <a href="https://shunsan4164649.github.io/20250920.html">フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
     <a href="https://shunsan4164649.github.io/20250922.html">東京スカイツリー＆すみだ水族館(9月22日)</a><br>
     <a href="https://shunsan4164649.github.io/20250923.html">東京駅構内＆周辺散策(9月23日)</a>
     <br><br>
