--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <h1>⭐️シュンさんのおもいで⭐️</h1>
-  <p>ページに来てくれた皆さん、ようこそ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>どうか暖かい気持ちで見ていただけると幸いです！</p>
+  <p>ページに来てくれた皆さん、ようこそ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の<br class="sp-br">記録や感想をレポートとしてまとめます。<br>どうか暖かい気持ちで見ていただけると幸いです！</p>
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a>
