--- a/index.html
+++ b/index.html
@@ -42,5 +42,12 @@
     <br><br>
     <a href="https://shunsan4164649.github.io/202510.html">2025年10月 (0)</a>
   </ul>
+  <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
+  <ul>
+    <a href="https://www.youtube.com/@ShunsanBroadcastingstation4649">シュンさん放送局(メインチャンネル)</a>
+    <a href="https://www.youtube.com/@ShunsanGameClub4649">シュンさんゲーム部(ゲームチャンネル)</a>
+    <a href="https://www.youtube.com/@ShunsanSoloTravel4649">ぼっち旅好きのシュンさん(トラベルチャンネル)</a>
+    <a href="https://x.com/Shunsanx4649">シュンさんのつぶやき。(Xメインアカウント)</a>
+  </ul>
 </body>
 </html>
