--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </ul>
   <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
   <ul>
-    <a href="https://www.youtube.com/@ShunsanBroadcastingstation4649">シュンさん放送局(メインチャンネル)</a>
-    <a href="https://www.youtube.com/@ShunsanGameClub4649">シュンさんゲーム部(ゲームチャンネル)</a>
-    <a href="https://www.youtube.com/@ShunsanSoloTravel4649">ぼっち旅好きのシュンさん(トラベルチャンネル)</a>
+    <a href="https://www.youtube.com/@ShunsanBroadcastingstation4649">シュンさん放送局(メインチャンネル)</a><br>
+    <a href="https://www.youtube.com/@ShunsanGameClub4649">シュンさんゲーム部(ゲームチャンネル)</a><br>
+    <a href="https://www.youtube.com/@ShunsanSoloTravel4649">ぼっち旅好きのシュンさん(トラベルチャンネル)</a><br>
     <a href="https://x.com/Shunsanx4649">シュンさんのつぶやき。(Xメインアカウント)</a>
   </ul>
 </body>
