--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202509.html">2025年9月 (6)</a><br>
-    <a href="https://shunsan4164649.github.io/202510.html">2025年10月 (0)</a>
-    <a href="https://shunsan4164649.github.io/202511.html">2025年11月 (0)</a>
+    <a href="https://shunsan4164649.github.io/202510.html">2025年10月 (0)</a><br>
+    <a href="https://shunsan4164649.github.io/202511.html">2025年11月 (0)</a><br>
     <a href="https://shunsan4164649.github.io/202512.html">2025年12月 (0)</a>
   </ul>
   <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
