--- a/202509/250920.html
+++ b/202509/250920.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年9月20日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>🤖 <span class="date">9月20日</span></h1>
+  <h2>フジテレビ＆ダイバーシティ東京プラザ</h2>
+  <p>お台場にある「ダイバーシティ東京プラザ」の<br class="sp-br">玄関口にあるUCガンダム像を見学！<br>デザインもかっこよくいつか動きそうなオーラが漂ってました。<br>その後はショッピングを楽しみ、充実した一日に。</p>
+  <img src="img/250920/250920_1.jpg" width="180" height="320" alt="9:16 画像">
+  <img src="img/250920/250920_2.jpg" width="320" height="180" alt="16:9 画像">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
+</body>
+</html>
