--- a/202509.html
+++ b/202509.html
@@ -31,12 +31,12 @@
   <p>こちらでは、2025年9月中に行った<br class="sp-br">旅行のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <p>①</p><a href="https://shunsan4164649.github.io/20250907.html">東京ディズニーシー(9月7日)</a><br>
-    <p>②</p><a href="https://shunsan4164649.github.io/20250913.html">池袋駅周辺散策(9月13日)</a><br>
-    <p>③</p><a href="https://shunsan4164649.github.io/20250915.html">あっとほぉーむカフェ(9月15日)</a><br>
-    <p>④</p><a href="https://shunsan4164649.github.io/20250920.html">フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
-    <p>⑤</p><a href="https://shunsan4164649.github.io/20250922.html">東京スカイツリー＆すみだ水族館(9月22日)</a><br>
-    <p>⑥</p><a href="https://shunsan4164649.github.io/20250923.html">東京駅構内＆周辺散策(9月23日)</a>
+    <p>①</p><a href="https://shunsan4164649.github.io/202509/250907.html">東京ディズニーシー(9月7日)</a><br>
+    <p>②</p><a href="https://shunsan4164649.github.io/202509/250913.html">池袋駅周辺散策(9月13日)</a><br>
+    <p>③</p><a href="https://shunsan4164649.github.io/202509/250915.html">あっとほぉーむカフェ(9月15日)</a><br>
+    <p>④</p><a href="https://shunsan4164649.github.io/202509/250920.html">フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
+    <p>⑤</p><a href="https://shunsan4164649.github.io/202509/250922.html">東京スカイツリー＆すみだ水族館(9月22日)</a><br>
+    <p>⑥</p><a href="https://shunsan4164649.github.io/202509/250923.html">東京駅構内＆周辺散策(9月23日)</a>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
