--- a/202509/250922.html
+++ b/202509/250922.html
@@ -30,8 +30,8 @@
   <h1>🐧 <span class="date">9月22日</span></h1>
   <h2>東京スカイツリー＆すみだ水族館</h2>
   <p>東京スカイツリーに登り、久しぶりに絶景を堪能。<br>すみだ水族館ではペンギンたちに癒やされました。<br>水族館って何回行っても飽きないよね～</p>
-  <img src="img/250922/250922_1.jpg" width="180" height="320" alt="9:16 画像">
-  <img src="img/250922/250922_2.jpg" width="320" height="180" alt="16:9 画像">
+  <img src="../img/250922/250922_1.jpg" width="180" height="320" alt="9:16 画像">
+  <img src="../img/250922/250922_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
   <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
 </body>
