--- a/202509/250907.html
+++ b/202509/250907.html
@@ -32,6 +32,9 @@
   <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、<br class="sp-br">荷物が落ちないか心配でした・・・<br>あとは「ファンタジースプリングス」での<br class="sp-br">キャラグリも満喫しました♪</p>
   <img src="../img/250907/250907_1.jpg" width="320" height="180" alt="16:9 画像">
   <img src="../img/250907/250907_2.jpg" width="320" height="180" alt="16:9 画像">
+  <br>
+  <img src="../img/250907/250907_3.jpg" width="320" height="180" alt="16:9 画像">
+  <img src="../img/250907/250907_4.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
   <a href="https://shunsan4164649.github.io/202509.html">2025年9月編へ</a>
 </body>
