--- a/202509/250907.html
+++ b/202509/250907.html
@@ -29,7 +29,7 @@
 <body>
   <h1>🎢 <span class="date">9月7日</span></h1>
   <h2>東京ディズニーシー</h2>
-  <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、<br class="sp-br">荷物が落ちないか心配でした・・・<br>あとは「ファンタジースプリングス」での<br class="sp-br">キャラグリも満喫しました♪</p>
+  <p>この日は約９ヶ月ぶりに東京ディズニーシーへ遊びに行きました！<br>ずっと気になっていた「レイジングスピリッツ」に初挑戦。<br>360度回転するコースターはスリル満点で、荷物が落ちないか心配でした。<br>そして「ファンタジースプリングス」でのキャラグリも満喫しました♪</p>
   <img src="../img/250907/250907_1.jpg" width="320" height="180" alt="16:9 画像">
   <img src="../img/250907/250907_2.jpg" width="320" height="180" alt="16:9 画像">
   <br>
