--- a/202509/250913.html
+++ b/202509/250913.html
@@ -30,7 +30,7 @@
 <body>
   <h1>🎳 <span class="date">9月13日</span></h1>
   <h2>池袋駅周辺散策</h2>
-  <p>池袋駅周辺にあるRound1へ遊びに行きました！<br>ボウリングで投げ放題してきました。<br>思わず童心に帰ったような気分に浸りました・・・</p>
+  <p>池袋駅周辺にあるRound1へ遊びに行きました！<br>ボウリングで投げ放題してきました。<br>思わず童心に帰ったような気分に浸りましたね～</p>
   <img src="../img/250913/250913_1.jpg" width="320" height="180" alt="16:9 画像">
   <img src="../img/250913/250913_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
