--- a/202509/250915.html
+++ b/202509/250915.html
@@ -29,7 +29,7 @@
 <body>
   <h1>🎀 <span class="date">9月15日</span></h1>
   <h2>あっとほぉーむカフェ</h2>
-  <p>秋葉原にある<br class="sp-br">「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧で、<br class="sp-br">非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
+  <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧だったので、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
   <img src="../img/250915/250915_1.jpg" width="320" height="180" alt="16:9 画像">
   <img src="../img/250915/250915_2.jpg" style="width: 54mm; height: 86mm;" alt="チェキサイズ画像">
   <br><br>
