--- a/202509/250920.html
+++ b/202509/250920.html
@@ -29,7 +29,7 @@
 <body>
   <h1>🤖 <span class="date">9月20日</span></h1>
   <h2>フジテレビ＆ダイバーシティ東京プラザ</h2>
-  <p>お台場にある「ダイバーシティ東京プラザ」の<br class="sp-br">玄関口にあるUCガンダム像を見学！<br>デザインもかっこよくいつか動きそうなオーラが漂ってました。<br>その後はショッピングを楽しみ、充実した一日に。</p>
+  <p>お台場にある「ダイバーシティ東京プラザ」の玄関口にあるUCガンダム像を見学！<br>デザインもかっこよくいつか動きそうなオーラが漂ってました。<br>その後はショッピングを楽しみ、充実した一日に。</p>
   <img src="../img/250920/250920_1.jpg" width="180" height="320" alt="9:16 画像">
   <img src="../img/250920/250920_2.jpg" width="320" height="180" alt="16:9 画像">
   <br><br>
