--- a/202510/251018.html
+++ b/202510/251018.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年10月18日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>🧱 <span class="date">10月18日</span></h1>
+  <h2>パシフィコ横浜＆横浜赤レンガ倉庫</h2>
+  <p></p>
+  <br><br>
+  <a href="https://shunsan4164649.github.io/202510.html">2025年10月編へ</a>
+</body>
+</html>
