--- a/202510.html
+++ b/202510.html
@@ -31,8 +31,8 @@
   <p>こちらでは、2025年10月中に行った<br class="sp-br">旅行のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <p>①</p><a href="https://shunsan4164649.github.io/20251018.html">パシフィコ横浜＆横浜赤レンガ倉庫(10月18日)</a><br>
-    <p>②</p><a href="https://shunsan4164649.github.io/20251019.html">マクセル アクアパーク 品川(10月19日)</a><br>
+    <a href="https://shunsan4164649.github.io/20251018.html">①パシフィコ横浜＆横浜赤レンガ倉庫(10月18日)</a><br>
+    <a href="https://shunsan4164649.github.io/20251019.html">②マクセル アクアパーク 品川(10月19日)</a><br>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
