--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <a href="https://shunsan4164649.github.io/202512.html">2025年12月 (0)</a>
   </ul>
   <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
+  <h2>💻️各種SNSページ📱</h2>
   <ul>
     <a href="https://www.youtube.com/@ShunsanBroadcastingstation4649">シュンさん放送局(メインチャンネル)</a><br>
     <a href="https://www.youtube.com/@ShunsanGameClub4649">シュンさんゲーム部(ゲームチャンネル)</a><br>
