--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>トップページ</title>
+  <link rel="icon" href="favicon.ico">
   <style>
     body {
       font-family: "Helvetica", "Arial", sans-serif;
