--- a/202509.html
+++ b/202509.html
@@ -28,7 +28,7 @@
 
 <body>
   <h1>2025年9月 トラベルレポート</h1>
-  <p>こちらでは、2025年9月中に行った<br class="sp-br">旅行のレポートをまとめております。</p>
+  <p>こちらでは、2025年9月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202509/250907.html">①東京ディズニーシー(9月7日)</a><br>
