--- a/202510.html
+++ b/202510.html
@@ -28,7 +28,7 @@
 
 <body>
   <h1>2025年10月 トラベルレポート</h1>
-  <p>こちらでは、2025年10月中に行った<br class="sp-br">旅行のレポートをまとめております。</p>
+  <p>こちらでは、2025年10月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/202510/251011.html">①サンリオピューロランド＆極楽湯多摩センター店(10月11日)</a><br>
