--- a/Calendar/202509.html
+++ b/Calendar/202509.html
@@ -32,11 +32,10 @@
   <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/2025/202509/250907.html">①東京ディズニーシー(9月7日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250913.html">②池袋駅周辺散策(9月13日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250915.html">③あっとほぉーむカフェ(9月15日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250920.html">④フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250922.html">⑤東京スカイツリー＆すみだ水族館(9月22日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250923.html">⑥東京駅構内＆周辺散策(9月23日)</a>
+    <a href="https://shunsan4164649.github.io/2025/202509/250915.html">②あっとほぉーむカフェ(9月15日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025/202509/250920.html">③フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025/202509/250922.html">④東京スカイツリー＆すみだ水族館(9月22日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025/202509/250923.html">⑤東京駅構内＆周辺散策(9月23日)</a>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
