--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   <p>ページに来てくれた皆さん、ようこそ！<br>こちらでは、私管理人のシュンが旅行等で出かけた際の記録や感想をレポートとしてまとめます。<br>どうか暖かい気持ちで見ていただけると幸いです！</p>
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
+    <p>2024年</p>
+    <a href="https://shunsan4164649.github.io/Calendar/202402.html">2024年2月 (2)</a>
+    <br><br>
+    <p>2025年</p>
     <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月 (5)</a><br>
     <a href="https://shunsan4164649.github.io/Calendar/202510.html">2025年10月 (3)</a><br>
     <a href="https://shunsan4164649.github.io/Calendar/202511.html">2025年11月 (0)</a><br>
