--- a/Calendar/202402.html
+++ b/Calendar/202402.html
@@ -31,7 +31,8 @@
   <p>こちらでは、2024年2月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/2024/202402/240215.html">①東京ディズニーランド(2月15日)</a>
+    <a href="https://shunsan4164649.github.io/2024/202402/240214.html">①東京ディズニーセレブレーションホテル ディスカバー(2月14日)</a>
+    <a href="https://shunsan4164649.github.io/2024/202402/240215.html">②東京ディズニーランド(2月15日)</a>
     <br><br>
     <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
   </ul>
