--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <p>2024年</p>
-    <a href="https://shunsan4164649.github.io/Calendar/202402.html">2024年2月 (2)</a><br>
+    <a href="https://shunsan4164649.github.io/Calendar/202402.html">2024年2月 (2)</a>
     <p>2025年</p>
     <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月 (5)</a><br>
     <a href="https://shunsan4164649.github.io/Calendar/202510.html">2025年10月 (3)</a><br>
