--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <p>2024年</p>
-    <a href="https://shunsan4164649.github.io/Calendar/202402.html">2024年2月 (2)</a>
+    <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月 (2)</a>
     <p>2025年</p>
-    <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月 (5)</a><br>
-    <a href="https://shunsan4164649.github.io/Calendar/202510.html">2025年10月 (3)</a><br>
-    <a href="https://shunsan4164649.github.io/Calendar/202511.html">2025年11月 (0)</a><br>
-    <a href="https://shunsan4164649.github.io/Calendar/202512.html">2025年12月 (0)</a>
+    <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月 (5)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">2025年10月 (3)</a>
   </ul>
   <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
   <h2>💻️各種SNSページ📱</h2>
