--- a/2024年/2月/2月.html
+++ b/2024年/2月/2月.html
@@ -31,8 +31,8 @@
   <p>こちらでは、2024年2月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/2024/202402/240214.html">①東京ディズニーセレブレーションホテル ディスカバー(2月14日)</a><br>
-    <a href="https://shunsan4164649.github.io/2024/202402/240215.html">②東京ディズニーランド(2月15日)</a>
+    <a href="https://shunsan4164649.github.io/2024年/2月/14日.html">①東京ディズニーセレブレーションホテル ディスカバー(2月14日)</a><br>
+    <a href="https://shunsan4164649.github.io/2024年/2月/15日.html">②東京ディズニーランド(2月15日)</a>
   </ul>
   <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
 </body>
