--- a/2024年/2月/14日.html
+++ b/2024年/2月/14日.html
@@ -30,12 +30,12 @@
   <h1>🏨 <span class="date">2月14日</span></h1>
   <h2>東京ディズニーセレブレーションホテル ディスカバー</h2>
   <p>この日は専門学校の企画の前乗りでホテルに泊まることになりました。<br>専門学校の友達と相部屋だったんですが、とても良い時間を過ごせました。<br>次の日の朝食バイキングからもうディズニー気分を味わえました！</p>
-  <img src="shunsan4164649.github.io/2024年/2月/001.JPG" width="320" height="180" alt="ホテル外観">
-  <img src="shunsan4164649.github.io/2024年/2月/002.JPG" width="320" height="180" alt="1Fロビーでの様子">
+  <img src="2024年/2月/001.JPG" width="320" height="180" alt="ホテル外観">
+  <img src="2024年/2月/002.JPG" width="320" height="180" alt="1Fロビーでの様子">
   <br>
-  <img src="shunsan4164649.github.io/2024年/2月/003.JPG" width="320" height="180" alt="中庭のモニュメント">
-  <img src="shunsan4164649.github.io/2024年/2月/004.JPG" width="320" height="180" alt="次の日の朝食バイキング">
+  <img src="2024年/2月/003.JPG" width="320" height="180" alt="中庭のモニュメント">
+  <img src="2024年/2月/004.JPG" width="320" height="180" alt="次の日の朝食バイキング">
   <br><br>
-  <a href="https://shunsan4164649.github.io/Calendar/202402.html">2024年2月編へ</a>
+  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月編へ</a>
 </body>
 </html>
