--- a/2024年/2月/15日.html
+++ b/2024年/2月/15日.html
@@ -30,11 +30,11 @@
   <h1>🏰 <span class="date">2月15日</span></h1>
   <h2>東京ディズニーランド</h2>
   <p>この日は専門学校の企画で東京ディズニーランドへ遊びに行きました！<br>前日のホテル前乗りからとても緊張してました…<br>人生初めての「スペース・マウンテン」にも乗れて良かったです！<br>一日だけでも、足が痛くなってくるのはディズニーあるあるだね（笑）</p>
-  <img src="2024年/2月/005.JPG" width="320" height="180" alt="スペース・マウンテン前でピース">
-  <img src="2024年/2月/006.JPG" width="320" height="180" alt="エントランスの花壇前でパシャリ">
+  <img src="/2024年/2月/005.JPG" width="320" height="180" alt="スペース・マウンテン前でピース">
+  <img src="/2024年/2月/006.JPG" width="320" height="180" alt="エントランスの花壇前でパシャリ">
   <br>
-  <img src="2024年/2月/007.JPG" width="320" height="180" alt="貴重なフォーショット">
-  <img src="2024年/2月/008.JPG" width="320" height="180" alt="大勢のゲストの前でスリーショット">
+  <img src="/2024年/2月/007.JPG" width="320" height="180" alt="貴重なフォーショット">
+  <img src="/2024年/2月/008.JPG" width="320" height="180" alt="大勢のゲストの前でスリーショット">
   <br><br>
   <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月編へ</a>
 </body>
