--- a/2025年/9月/9月.html
+++ b/2025年/9月/9月.html
@@ -31,11 +31,11 @@
   <p>こちらでは、2025年9月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/2025/202509/250907.html">①東京ディズニーシー(9月7日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250915.html">②あっとほぉーむカフェ(9月15日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250920.html">③フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250922.html">④東京スカイツリー＆すみだ水族館(9月22日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202509/250923.html">⑤東京駅構内＆周辺散策(9月23日)</a>
+    <a href="https://shunsan4164649.github.io/2025年/9月/7日.html">①東京ディズニーシー(9月7日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/9月/15日.html">②あっとほぉーむカフェ(9月15日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/9月/20日.html">③フジテレビ＆ダイバーシティ東京プラザ(9月20日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/9月/22日.html">④東京スカイツリー＆すみだ水族館(9月22日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/9月/23日.html">⑤東京駅構内＆周辺散策(9月23日)</a>
   </ul>
   <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
 </body>
