--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <a href="https://www.youtube.com/@ShunsanBroadcastingstation4649">シュンさん放送局（メインチャンネル）</a><br>
     <a href="https://www.youtube.com/@ShunsanGameClub4649">シュンさんゲーム部（ゲームチャンネル）</a><br>
     <a href="https://www.youtube.com/@ShunsanSoloTravel4649">ぼっち旅好きのシュンさん（トラベルチャンネル）</a><br>
-    <a href="https://x.com/Shunsanx4649">シュンさんのつぶやき。（Ｘメインアカウント）</a>
+    <a href="https://x.com/Shunsanx4649">シュンさんのつぶやき。（Ｘアカウント）</a>
   </ul>
 </body>
 </html>
