--- a/2025年/9月/15日.html
+++ b/2025年/9月/15日.html
@@ -30,11 +30,11 @@
   <h1>🎀 <span class="date">9月15日</span></h1>
   <h2>あっとほぉーむカフェ</h2>
   <p>秋葉原にある「あっとほぉーむカフェ 秋葉原本店5F」に初めて行ってきました！<br>メイドさんの接客がとても優しく丁寧だったので、非日常感をたっぷり味わえました。<br>またいつか帰宅したいなぁ～なんて思ったりして。</p>
-  <img src="/img/2025/202509/005.jpg" style="width: 54mm; height: 86mm;" alt="ぷっちさんとのチェキ撮影">
-  <img src="/img/2025/202509/006.jpg" width="180" height="320" alt="永遠の17才に戻れるパフェ">
+  <img src="/2025年/9月/005.JPG" style="width: 54mm; height: 86mm;" alt="ぷっちさんとのチェキ撮影">
+  <img src="/2025年/9月/006.JPG" width="180" height="320" alt="永遠の17才に戻れるパフェ">
   <br>
-  <img src="/img/2025/202509/007.jpg" width="320" height="180" alt="ぴぴよぴよぴよオムライス">
+  <img src="/2025年/9月/007.JPG" width="320" height="180" alt="ぴぴよぴよぴよオムライス">
   <br><br>
-  <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
 </body>
 </html>
