--- a/2025年/9月/20日.html
+++ b/2025年/9月/20日.html
@@ -30,9 +30,9 @@
   <h1>🤖 <span class="date">9月20日</span></h1>
   <h2>フジテレビ＆ダイバーシティ東京プラザ</h2>
   <p>お台場にある「ダイバーシティ東京プラザ」の玄関口にあるUCガンダム像を見学！<br>デザインもかっこよくいつか動きそうなオーラが漂ってました。<br>その後はショッピングを楽しみ、充実した一日に。</p>
-  <img src="/img/2025/202509/008.jpg" width="180" height="320" alt="UCガンダム立像">
-  <img src="/img/2025/202509/009.jpg" width="320" height="180" alt="夜のレインボーブリッジ">
+  <img src="/2025年/9月/008.JPG" width="180" height="320" alt="UCガンダム立像">
+  <img src="/2025年/9月/009.JPG" width="320" height="180" alt="夜のレインボーブリッジ">
   <br><br>
-  <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
 </body>
 </html>
