--- a/2025年/9月/22日.html
+++ b/2025年/9月/22日.html
@@ -30,9 +30,9 @@
   <h1>🐧 <span class="date">9月22日</span></h1>
   <h2>東京スカイツリー＆すみだ水族館</h2>
   <p>東京スカイツリーに登り、久しぶりに絶景を堪能。<br>すみだ水族館ではペンギンたちに癒やされました。<br>水族館って何回行っても飽きないよね～</p>
-  <img src="/img/2025/202509/010.jpg" width="180" height="320" alt="東京スカイツリー">
-  <img src="/img/2025/202509/011.jpg" width="320" height="180" alt="すみだ水族館内のペンギンたち">
+  <img src="/2025年/9月/010.JPG" width="180" height="320" alt="東京スカイツリー">
+  <img src="/2025年/9月/011.JPG" width="320" height="180" alt="すみだ水族館内のペンギンたち">
   <br><br>
-  <a href="https://shunsan4164649.github.io/Calendar/202509.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
 </body>
 </html>
