--- a/2025年/10月/10月.html
+++ b/2025年/10月/10月.html
@@ -31,9 +31,9 @@
   <p>こちらでは、2025年10月中に実施した旅行等のレポートをまとめております。</p>
   <h2>✏️おもいで記録✏️</h2>
   <ul>
-    <a href="https://shunsan4164649.github.io/2025/202510/251011.html">①サンリオピューロランド＆極楽湯多摩センター店(10月11日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202510/251018.html">②パシフィコ横浜＆横浜赤レンガ倉庫(10月18日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025/202510/251019.html">③マクセル アクアパーク 品川(10月19日)</a>
+    <a href="https://shunsan4164649.github.io/2025年/10月/11日.html">①サンリオピューロランド＆極楽湯多摩センター店(10月11日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/10月/18日.html">②パシフィコ横浜＆横浜赤レンガ倉庫(10月18日)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/10月/19日.html">③マクセル アクアパーク 品川(10月19日)</a>
   </ul>
   <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
 </body>
