--- a/2025年/10月/11日.html
+++ b/2025年/10月/11日.html
@@ -31,6 +31,6 @@
   <h2>サンリオピューロランド＆極楽湯多摩センター店</h2>
   <p></p>
   <br><br>
-  <a href="https://shunsan4164649.github.io/Calendar/202510.html">2025年10月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">2025年10月編へ</a>
 </body>
 </html>
