--- a/2025年/1月/1月.html
+++ b/2025年/1月/1月.html
@@ -32,7 +32,7 @@
   <h2>✏️おもいで記録✏️</h2>
   <ul>
     <a href="https://shunsan4164649.github.io/2025年/1月/9日.html">①東京ディズニーシー(1月9日)</a><br>
-    <a href="https://shunsan4164649.github.io/2025年/1月/10日.html">⑤東京ディズニーランド(1月10日)</a>
+    <a href="https://shunsan4164649.github.io/2025年/1月/10日.html">②東京ディズニーランド(1月10日)</a>
   </ul>
   <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
 </body>
