--- a/2025年/1月/10日.html
+++ b/2025年/1月/10日.html
@@ -29,13 +29,13 @@
 <body>
   <h1>🏰 <span class="date">1月10日</span></h1>
   <h2>東京ディズニーランド</h2>
-  <p>今日は一年ぶりに東京ディズニーランドに来ました！<br>前日のシーも楽しかったけど今日もめっちゃ楽しめた！<br>「スペース・マウンテン」はもう無くなっちまった…<br>2027年を迎えるのを待ちましょう。</p>
-  <img src="/2024年/2月/005.JPG" width="320" height="180" alt="スペース・マウンテン前でピース">
-  <img src="/2024年/2月/006.JPG" width="320" height="180" alt="エントランスの花壇前でパシャリ">
+  <p>今日は一年ぶりに東京ディズニーランドに来ました！<br>前日のシーも楽しかったけど今日もめっちゃ楽しめた！<br>あの「スペース・マウンテン」はもう無くなっちまった…<br>リニューアル完成年の2027年になるのを待ちましょう。</p>
+  <img src="/2025年/1月/.JPG" width="320" height="180" alt="スペース・マウンテン前でピース">
+  <img src="/2025年/1月/.JPG" width="320" height="180" alt="エントランスの花壇前でパシャリ">
   <br>
-  <img src="/2024年/2月/007.JPG" width="320" height="180" alt="貴重なフォーショット">
-  <img src="/2024年/2月/008.JPG" width="320" height="180" alt="大勢のゲストの前でスリーショット">
+  <img src="/2025年/1月/.JPG" width="320" height="180" alt="貴重なフォーショット">
+  <img src="/2025年/1月/.JPG" width="320" height="180" alt="大勢のゲストの前でスリーショット">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2024年2月編へ</a>
 </body>
 </html>
