--- a/2025年/1月/9日.html
+++ b/2025年/1月/9日.html
@@ -29,12 +29,15 @@
 <body>
   <h1>🌋 <span class="date">1月9日</span></h1>
   <h2>東京ディズニーシー</h2>
-  <p><br><br><br></p>
-  <img src="/2025年/1月/001.JPG" width="320" height="180" alt="">
-  <img src="/2025年/1月/002.JPG" width="320" height="180" alt="">
+  <p>この日はかなり久しぶりにTDSに行きました！<br>話題の「ファンタジースプリングス」にも行ってきました♪<br>いろんなキャラからサインを貰えました！<br>ラプンツェルのアトラクション、原作を再現していて泣きそうになった…</p>
+  <img src="/2025年/1月/001.JPG" width="320" height="180" alt="オーロラ姫ツーショット">
+  <img src="/2025年/1月/002.JPG" width="320" height="180" alt="ラプンツェルツーショット">
   <br>
-  <img src="/2025年/1月/003.JPG" width="320" height="180" alt="">
-  <img src="/2025年/1月/004.JPG" width="320" height="180" alt="">
+  <img src="/2025年/1月/003.JPG" width="320" height="180" alt="アリエルツーショット">
+  <img src="/2025年/1月/004.JPG" width="320" height="180" alt="ミニーマウスツーショット">
+  <br>
+  <img src="/2025年/1月/005.JPG" width="320" height="180" alt="ラプンツェルカメラサイン切り抜き">
+  <img src="/2025年/1月/006.JPG" width="320" height="180" alt="アリエルカメラサイン切り抜き">
   <br><br>
   <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2025年1月編へ</a>
 </body>
