--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月 (2)</a>
     <p>2025年</p>
     <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2025年1月 (2)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/4月/4月.html">2025年4月 (1)</a><br>
     <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月 (5)</a><br>
     <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">2025年10月 (3)</a>
   </ul>
