--- a/2025年/5月/3日.html
+++ b/2025年/5月/3日.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年5月3日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>🐍 <span class="date">5月3日</span></h1>
+  <h2>八木山動物公園</h2>
+  <p>宮城県仙台市にある「八木山動物公園」に行ってきました！<br>たくさんの動物の観察ができて、楽しかったです！<br>動物園って入園料も安いから行きやすいよね～<br>またいつか、行ってみたいと思いました。</p>
+  <img src="/2025年/5月/001.JPG" width="320" height="180" alt="ベーブ・ルース像ツーショット">
+  <img src="/2025年/5月/002.JPG" width="320" height="180" alt="デカすぎるゾウさん">
+  <br>
+  <img src="/2025年/5月/003.JPG" width="320" height="180" alt="ホッキョクグマのオブジェ">
+  <img src="/2025年/5月/004.JPG" width="320" height="180" alt="美しすぎる白蛇">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/5月/5月.html">2025年5月編へ</a>
+</body>
+</html>
