--- a/2024年/2月/14日.html
+++ b/2024年/2月/14日.html
@@ -36,6 +36,6 @@
   <img src="/2024年/2月/003.JPG" width="320" height="180" alt="中庭のモニュメント">
   <img src="/2024年/2月/004.JPG" width="320" height="180" alt="次の日の朝食バイキング">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月編へ</a>
+  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">戻る</a>
 </body>
 </html>
