--- a/2024年/2月/15日.html
+++ b/2024年/2月/15日.html
@@ -36,6 +36,6 @@
   <img src="/2024年/2月/007.JPG" width="320" height="180" alt="貴重なフォーショット">
   <img src="/2024年/2月/008.JPG" width="320" height="180" alt="大勢のゲストの前でスリーショット">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月編へ</a>
+  <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">戻る</a>
 </body>
 </html>
