--- a/2025年/10月/19日.html
+++ b/2025年/10月/19日.html
@@ -31,7 +31,7 @@
   <h2>マクセル アクアパーク 品川</h2>
   <p></p>
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">2025年10月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">戻る</a>
 </body>
 </html>
 
