--- a/2025年/1月/10日.html
+++ b/2025年/1月/10日.html
@@ -57,6 +57,6 @@
   <img src="/2025年/1月/023.JPG" width="320" height="180" alt="ポカホンタスカメラサイン切り抜き">
   <img src="/2025年/1月/024.JPG" width="320" height="180" alt="東京ディズニーランドホテル外観">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2025年1月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">戻る</a>
 </body>
 </html>
