--- a/2025年/1月/9日.html
+++ b/2025年/1月/9日.html
@@ -39,6 +39,6 @@
   <img src="/2025年/1月/005.JPG" width="320" height="180" alt="ラプンツェルカメラサイン切り抜き">
   <img src="/2025年/1月/006.JPG" width="320" height="180" alt="アリエルカメラサイン切り抜き">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2025年1月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">戻る</a>
 </body>
 </html>
