--- a/2025年/4月/19日.html
+++ b/2025年/4月/19日.html
@@ -36,6 +36,6 @@
   <img src="/2025年/4月/003.JPG" width="320" height="180" alt="NDスタジアム内でイチゴ削りと共に">
   <img src="/2025年/4月/004.JPG" width="320" height="180" alt="岡崎建哉さんとツーショット">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/4月/4月.html">2025年4月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/4月/4月.html">戻る</a>
 </body>
 </html>
