--- a/2025年/5月/3日.html
+++ b/2025年/5月/3日.html
@@ -36,6 +36,6 @@
   <img src="/2025年/5月/003.JPG" width="320" height="180" alt="ホッキョクグマのオブジェ">
   <img src="/2025年/5月/004.JPG" width="320" height="180" alt="美しすぎる白蛇">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/5月/5月.html">2025年5月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/5月/5月.html">戻る</a>
 </body>
 </html>
