--- a/2025年/9月/15日.html
+++ b/2025年/9月/15日.html
@@ -35,6 +35,6 @@
   <br>
   <img src="/2025年/9月/007.JPG" width="320" height="180" alt="ぴぴよぴよぴよオムライス">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">戻る</a>
 </body>
 </html>
