--- a/2025年/9月/20日.html
+++ b/2025年/9月/20日.html
@@ -33,6 +33,6 @@
   <img src="/2025年/9月/008.JPG" width="180" height="320" alt="UCガンダム立像">
   <img src="/2025年/9月/009.JPG" width="320" height="180" alt="夜のレインボーブリッジ">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">戻る</a>
 </body>
 </html>
