--- a/2025年/9月/22日.html
+++ b/2025年/9月/22日.html
@@ -33,6 +33,6 @@
   <img src="/2025年/9月/010.JPG" width="180" height="320" alt="東京スカイツリー">
   <img src="/2025年/9月/011.JPG" width="320" height="180" alt="すみだ水族館内のペンギンたち">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">戻る</a>
 </body>
 </html>
