--- a/2025年/9月/23日.html
+++ b/2025年/9月/23日.html
@@ -33,6 +33,6 @@
   <img src="/2025年/9月/012.JPG" width="320" height="180" alt="いつ見ても美しい東京駅">
   <img src="/2025年/9月/013.JPG" width="320" height="180" alt="まい泉の美味すぎるヒレカツ">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">戻る</a>
 </body>
 </html>
