--- a/2025年/9月/7日.html
+++ b/2025年/9月/7日.html
@@ -36,6 +36,6 @@
   <img src="/2025年/9月/003.JPG" width="320" height="180" alt="火山を目指して">
   <img src="/2025年/9月/004.JPG" width="320" height="180" alt="地球モニュメント前で">
   <br><br>
-  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月編へ</a>
+  <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">戻る</a>
 </body>
 </html>
