--- a/index.html
+++ b/index.html
@@ -39,13 +39,16 @@
   <h2>📅おもいでカレンダー📅</h2>
   <ul>
     <p>2024年</p>
-    <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2024年2月 (2)</a>
+    <a href="https://shunsan4164649.github.io/2024年/2月/2月.html">2月 (2)</a>
     <p>2025年</p>
-    <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">2025年1月 (2)</a><br>
-    <a href="https://shunsan4164649.github.io/2025年/4月/4月.html">2025年4月 (1)</a><br>
-    <a href="https://shunsan4164649.github.io/2025年/5月/5月.html">2025年5月 (1)</a><br>
-    <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">2025年9月 (5)</a><br>
-    <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">2025年10月 (3)</a>
+    <a href="https://shunsan4164649.github.io/2025年/1月/1月.html">1月 (2)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/4月/4月.html">4月 (1)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/5月/5月.html">5月 (1)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/6月/6月.html">6月 (?)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/7月/7月.html">7月 (?)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/8月/8月.html">8月 (?)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/9月/9月.html">9月 (5)</a><br>
+    <a href="https://shunsan4164649.github.io/2025年/10月/10月.html">10月 (3)</a>
   </ul>
   <p>◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇◆◇</p>
   <h2>💻️各種SNSページ📱</h2>
