--- a/2025年/6月/22日.html
+++ b/2025年/6月/22日.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年6月22日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>⚽️ <span class="date">6月22日</span></h1>
+  <h2>ソユースタジアム＆秋田駅周辺散策</h2>
+  <p>今日はブラウブリッツ秋田のアウェイ戦でソユスタに来ました！<br>この日も雨で過去3年連続、雨試合です…<br>おかげで靴も濡れて足が変なことに。<br>でも試合は3-2で勝てたから嬉しかった！</p>
+  <img src="/2025年/6月/001.JPG" width="320" height="180" alt="新型車両前で祖母とツーショット">
+  <img src="/2025年/6月/002.JPG" width="320" height="180" alt="ソユスタは今年も雨降り">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/6月/6月.html">戻る</a>
+</body>
+</html>
