--- a/2025年/7月/7月.html
+++ b/2025年/7月/7月.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年7月</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>2025年7月 トラベルレポート</h1>
+  <p>こちらでは、2025年7月中に実施した旅行等のレポートをまとめております。</p>
+  <h2>✏️おもいで記録✏️</h2>
+  <ul>
+    <a href="https://shunsan4164649.github.io/2025年/7月/27日.html">①スタッド・ランス親善試合観戦(7月27日)</a>
+  </ul>
+  <a href="https://shunsan4164649.github.io/index.html">トップページへ</a>
+</body>
+</html>
