--- a/2025年/7月/27日.html
+++ b/2025年/7月/27日.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年7月27日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>⚽️ <span class="date">7月27日</span></h1>
+  <h2>スタッド・ランス親善試合観戦</h2>
+  <p>ホームスタジアム「NDスタ」にてドリームマッチが実現！<br>あの伊東純也選手が所属するスタッド・ランスとの親善試合が行われました！<br>「ものまねJAPAN」の皆さんとも写真撮れました！<br>まぁ、最終的にはホームチームを応援しちゃってた♪</p>
+  <img src="/2025年/7月/001.JPG" width="320" height="180" alt="スタジアムビジョン前で">
+  <img src="/2025年/7月/002.JPG" width="320" height="180" alt="ものまねだよね？">
+  <br>
+  <img src="/2025年/7月/003.JPG" width="320" height="180" alt="夕焼けが美しすぎる">
+  <img src="/2025年/7月/004.JPG" width="320" height="180" alt="可愛いマスコットが待っていた">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/7月/7月.html">戻る</a>
+</body>
+</html>
