--- a/2025年/8月/1日.html
+++ b/2025年/8月/1日.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年8月1日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>💻️ <span class="date">8月1日</span></h1>
+  <h2>東洋大学 情報連携学部(INIAD HUB-1)</h2>
+  <p>今日はセミナーを受けにINIADに来ました。<br>旅行気分じゃないけどすごいキャンパスだなと感心しました。<br>ここで授業受けてる学生さんは頭いいんだなと思いました。<br>セミナーもしっかり受けることができました！</p>
+  <img src="/2025年/8月/001.JPG" width="320" height="180" alt="新幹線内でパシャリ">
+  <img src="/2025年/8月/002.JPG" width="320" height="180" alt="都会のキャンパスはレベチ">
+  <br>
+  <img src="/2025年/8月/003.JPG" width="320" height="180" alt="幾何学的なデザインがかっこいい">
+  <img src="/2025年/8月/004.JPG" width="320" height="180" alt="かがやきが停車していた">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/8月/8月.html">戻る</a>
+</body>
+</html>
