--- a/2025年/8月/30日.html
+++ b/2025年/8月/30日.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年8月30日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>🚉 <span class="date">8月30日</span></h1>
+  <h2>東京駅周辺散策</h2>
+  <p>今日は東京駅周辺を散策しました！<br>今話題の「みそきん本店」にはシャッターが閉まっていた（悲）<br>それにしても東京は広すぎる…</p>
+  <img src="/2025年/8月/001.JPG" width="320" height="180" alt="京浜東北線に一人で乗った伝説を持つ男">
+  <br>
+  <img src="/2025年/8月/002.JPG" width="180" height="320" alt="みそきんの歴史を知る">
+  <img src="/2025年/8月/003.JPG" width="180" height="320" alt="やっと買えたみそきんヌードル">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/8月/8月.html">戻る</a>
+</body>
+</html>
