--- a/2025年/8月/31日.html
+++ b/2025年/8月/31日.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>2025年8月31日</title>
+  <style>
+    body {
+      font-family: "Helvetica", "Arial", sans-serif;
+      line-height: 1.8;
+      background-color: #f9f9f9;
+      color: #333;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    section {
+      margin-bottom: 30px;
+    }
+    .date {
+      font-weight: bold;
+      color: #2980b9;
+    }
+  </style>
+</head>
 
+<body>
+  <h1>⌚ <span class="date">8月31日</span></h1>
+  <h2>新宿駅周辺散策＆Apple 新宿</h2>
+  <p>今日は新宿駅周辺を散策しました。<br>人生初の「Apple 新宿」で念願のApple Watchを購入！<br>正直、決済が本当に怖かった買い物でした…<br>東京記念だから大事に使わないとね～</p>
+  <img src="/2025年/8月/008.JPG" width="320" height="180" alt="ちいかわストアってあるんだね">
+  <img src="/2025年/8月/009.JPG" width="320" height="180" alt="買ったぜ">
+  <br>
+  <img src="/2025年/8月/010.JPG" width="320" height="180" alt="キレイな青空の下で">
+  <img src="/2025年/8月/011.JPG" width="320" height="180" alt="どこを見ているのだろうか">
+  <br><br>
+  <a href="https://shunsan4164649.github.io/2025年/8月/8月.html">戻る</a>
+</body>
+</html>
